--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_API_URL=http://localhost:8080/api
+REACT_APP_API_URL=https://dam-system-backend.onrender.com/api
 REACT_APP_MAX_FILE_SIZE=10485760
 REACT_APP_SUPPORTED_FILE_TYPES=image/jpeg,image/png,image/gif,application/pdf,video/mp4
